--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "swiper": "^11.2.0",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
