--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "package": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
     "swiper": "^11.2.0",
