--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "package": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.0",
