--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "joi": "^17.13.3",
     "package": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.0",
     "tailwind-scrollbar-hide": "^2.0.0"
